[package]
name = "sdramemu"
edition = "2021"
version = "1.0.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
common = { path = "./common" }
svdpi = { version = "0.0.1" }
tracing = "0.1.40"
hex = "0.4.3"
rand = "0.8"

[features]
sv2023 = ["svdpi/sv2023"]
vpi = ["svdpi/vpi"]
trace = []
default = ["trace", "vpi"]
